environments/gloo-gateway/gateway-api/ai-gateway/chatbot/base/language-chatbot/language-chatbot.yaml
apiVersion: v1
kind: Service
metadata:
  name: language-chat
  namespace: ai-chatbot
  labels:
    app: language-chat
spec:
  ports:
  - port: 3000
    name: http
  selector:
    name: language-chat
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: language-chat-deployment
  namespace: ai-chatbot
  labels:
    app: language-chat
spec:
  replicas: 1
  selector:
    matchLabels:
      name: language-chat
  template:
    metadata:
      labels:
        name: language-chat
      annotations:
        proxy.istio.io/config: '{ "holdApplicationUntilProxyStarts": true }'
    spec:
      serviceAccountName: gptportal
      containers:
      - name: gptportal
        image: ably77/gptportal:0.1.2
        ports:
        - containerPort: 3000
        imagePullPolicy: Always
        volumeMounts:
        - name: instructions-volume
          mountPath: /app/public/instructions.md
          subPath: instructions.md
        - name: gemini-message-volume
          mountPath: /app/public/geminiMessage.txt
          subPath: geminiMessage.txt
      volumes:
      - name: instructions-volume
        configMap:
          name: language-translator-system-prompt-configmap
          items:
          - key: instructions.md
            path: instructions.md
      - name: gemini-message-volume
        configMap:
          name: language-translator-system-prompt-configmap
          items:
          - key: instructions.md
            path: geminiMessage.txt
