environments/gloo-gateway/gateway-api/ai-gateway/chatbot/base/language-chatbot/language-chatbot-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: language-chatbot-route
  namespace: ai-chatbot
  labels:
    example: chatbot-route
    gateway: https
spec:
  hostnames:
  - "language-chatbot.gwapi.glooplatform.com"
  parentRefs:
    - name: https
      namespace: gloo-system
  rules:
    - backendRefs:
        - name: language-chat
          port: 3000
      matches:
        - path:
            type: PathPrefix
            value: /
      filters:
      - type: ExtensionRef
        extensionRef:
          group: gateway.solo.io
          kind: RouteOption
          name: language-chatbot-route-policies
